# birch

./: .gitignore  LICENSE  Setup.hs  birch.cabal  birch.cfg.example  config.json  hsvkbot.cabal  stack.yaml  vkbot.cabal
src/: AudioDB.hs  Card.hs  CardPictureDB.hs  Command.hs  Config.hs  LolEcho.hs  Main.hs  UserManagment.hs  VK.hs  Version.hs
src/Card/: Json.hs  Parser.hs  Type.hs
src/VK/: Audio.hs  Base.hs  Documents.hs  Friends.hs  Messages.hs  Photos.hs  Types.hs  Users.hs
src/Version/: TH.hs
