name:                birch
version:             0.8
synopsis:            Hearthstone card fetcher for VK
description:         Please see README.md
author:              Hithroc Mehatoko
maintainer:          hithroc@gmail.com
copyright:           2015 Hithroc Mehatoko
category:            Web
build-type:          Custom
cabal-version:       >=1.10

executable birch
  hs-source-dirs:      src
  other-modules:       Card
               ,       Card.Parser
               ,       Card.Type
               ,       Card.Json
               ,       Config
               ,       Command
               ,       Version
               ,       Version.TH
               ,       VK
               ,       VK.Messages
               ,       VK.Photos
               ,       VK.Base
               ,       VK.Users
               ,       VK.Audio
               ,       AudioDB
               ,       LolEcho
               ,       Paths_birch
               ,       UserManagment
               ,       VK.Documents
               ,       VK.Friends
               ,       VK.Types
               ,       CardPictureDB
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                    ,  ConstraintKinds
                    ,  FlexibleContexts
                    ,  ScopedTypeVariables
  build-depends:       base >= 4.7 && < 5
               ,       aeson >= 0.9 && < 0.11
               ,       aeson-lens >= 0.5 && < 0.6
               ,       bytestring >= 0.10 && < 0.11
               ,       parsec >= 3.1 && < 3.2
               ,       containers >= 0.5 && < 0.6
               ,       wreq >= 0.4 && < 0.5
               ,       http-client >= 0.4 && <0.5
               ,       http-client-tls
               ,       http-types >= 0.9 && <0.10
               ,       lens >= 4.13 && < 4.14
               ,       hslogger >= 1.2 && < 1.3
               ,       mtl >= 2.2 && < 2.3
               ,       ether >= 0.4 && < 0.5
               ,       VKHS >= 0.5 && < 0.6
               ,       time >= 1.5 && < 1.6
               ,       acid-state >= 0.14 && <0.15
               ,       text >= 1.2 && <1.3
               ,       template-haskell >= 2.10 && <2.11
               ,       process >= 1.2 && <1.3
               ,       random >= 1.1 && <1.2
               ,       MissingH >= 1.3 && <1.4
               ,       stm >= 2.4 && <2.5
               ,       directory >= 1.2 && <1.3
               ,       unix
               ,       hdaemonize
               ,       unordered-containers
               ,       lifted-base
               ,       monad-control
               ,       safecopy
               ,       cryptohash
