name:                hsvkbot
version:             0.1.0.0
synopsis:            Hearthstone card fetcher for VK
description:         Please see README.md
author:              Hithroc Mehatoko
maintainer:          hithroc@gmail.com
copyright:           2015 Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hsvkbot
  hs-source-dirs:      src
  other-modules:       Card
               ,       Card.Parser
               ,       Card.Type
               ,       Card.Json
               ,       Config
               ,       VK
               ,       VK.Messages
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                    ,  ConstraintKinds
                    ,  FlexibleContexts
  build-depends:       base >= 4.7 && < 5
               ,       aeson >= 0.8 && < 0.9
               ,       aeson-lens >= 0.5 && < 0.6
               ,       bytestring >= 0.10 && < 0.11
               ,       parsec >= 3.1 && < 3.2
               ,       containers >= 0.5 && < 0.6
               ,       wreq >= 0.4 && < 0.5
               ,       lens >= 4.12 && < 4.13
               ,       hslogger >= 1.2 && < 1.3
               ,       mtl >= 2.2 && < 2.3
               ,       ether >= 0.3 && < 0.4
               ,       VKHS >= 0.5 && < 0.6
