name:                vkbot
version:             0.1.0.0
synopsis:            Hearthstone VK Bot
description:         Please see README.md
author:              Hithroc Mehatoko
maintainer:          hithroc@gmail.com
copyright:           2015 Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable vkbot
  hs-source-dirs:      src
  other-modules:       Card
               ,       Card.Parser
               ,       Card.Type
               ,       Card.Json
               ,       Config
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
               ,       VKHS
               ,       aeson
               ,       aeson-lens
               ,       bytestring
               ,       parsec
               ,       containers
               ,       wreq
               ,       mtl
               ,       lens
               ,       http-client
               ,       hslogger
